# FatihServer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fatihserver/framework/: app.py  router.py  static_files.py  templates.py
fatihserver/parsers/: http_parser.py
fatihserver/server/: http_server.py  request_handler.py
framework/: app.py  router.py  static_files.py  templates.py
framework/middlewares/: __init__.py
parsers/: http_parser.py
server/: http_server.py  request_handler.py  tcp.py
src/fatihserver/framework/: app.py  router.py  static_files.py  templates.py
src/fatihserver/server/: http_server.py  request_handler.py
tests/: http_header_test.py  http_server_test.py  http_test.py  server_test.py
