[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "FatihServer"
version = "0.0.1"
authors = [
  { name="FFC", email="fatihsaika@gmail.com" },
]
description = "A simple Web Server for my personal use"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FFC12/FatihServer"