[tool.poetry]
name = "fatihserver"
version = "0.1.0"
description = "A web framework for my personal use"
authors = ["fatih <fatihsaika@gmail.com>"]
repository = "https://github.com/FFC12/FatihServer/tree/master"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
chevron = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
